--- a/index.html
+++ b/index.html
@@ -3,11 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
     <link rel="stylesheet" href="styles.css" />
-    <title>Document</title>
+    <title>The Lyrics Searcher</title>
   </head>
   <body>
+    <header>
+      <h1>Lyrics Search</h1>
+      <form id="form">
+        <input
+          type="text"
+          id="search"
+          placeholder="Enter Artist or Song Name"
+        />
+        <button>Search</button>
+      </form>
+    </header>
+
+    <div id="result" class="container">
+      <p>Results will be displayed here</p>
+    </div>
+
+    <div id="more" class="container centered"></div>
     <script src="app.js"></script>
   </body>
 </html>
